ProcessTools.java updated